--- a/styles/colors.less
+++ b/styles/colors.less
@@ -10,7 +10,7 @@
 // Monochrome -----------------------------------
 @mono-1: #ffffff;  // default text
 @mono-2: #c7c7c7;  // not sure what uses this...
-@mono-3: #2b6fb6;  // comments
+@mono-3: #25476a;  // comments
 
 // Colors -----------------------------------
 @hue-1: #ffffff;  // built-in functions, dunder methods
