adding orange to syntax highlight

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -23,5 +23,6 @@
 
 @hue-7: #0cc18d;  // arguments, numbers, boolean values
 @hue-8: #ffffff;  // class names
+@hue-9: #f16d23;  // variable types
 
 @syntax-accent-hue: #30aeff;   // accent colour, used for bracket matching and flashing
