--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -9,8 +9,9 @@
     &.syntax--of,
     &.syntax--instanceof,
     &.syntax--new,
+    &.syntax--typeof,
     &.syntax--void {
-      color: @hue-9;
+      color: @hue-3;
     }
   }
 }
