--- a/styles/colors.less
+++ b/styles/colors.less
@@ -23,6 +23,8 @@
 
 @hue-7: #0cc18d;  // arguments, numbers, boolean values
 @hue-8: #ffffff;  // class names
-@hue-9: #f16d23;  // variable types
+
+@hue-9: #f16d23;  // annotations, typehints, decorators (in Python)
+@hue-10: #ffffff;  // arguments
 
 @syntax-accent-hue: #30aeff;   // accent colour, used for bracket matching and flashing
