--- a/styles/languages/python.less
+++ b/styles/languages/python.less
@@ -4,6 +4,19 @@
   }
 
   .syntax--variable.syntax--parameter {
-    color: @hue-7;
+    color: @hue-10;
   }
+
+  .syntax--comment.syntax--typehint {
+    color: @hue-9;
+  }
+
+  .syntax--entity.syntax--name.syntax--function.syntax--decorator {
+    color: @hue-9;
+  }
+
+  .syntax--support.syntax--type {
+    color: @hue-9;
+  }
+
 }
